practice/network_policy/network-pol-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: network-policy
  labels:
    app: frontend
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  namespace: network-policy
  labels:
    app: client
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command:
        - sleep
        - '3600'
